--- a/lib/tests/Makefile.am
+++ b/lib/tests/Makefile.am
@@ -1,7 +1,8 @@
-check_PROGRAMS = test-coord test-atom test-molecule
+check_PROGRAMS = test-coord test-atom test-molecule test-system
 
 AM_CPPFLAGS= -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/lib/
-AM_LDFLAGS =  -Wall -pedantic -ansi -fwritable-strings 
+AM_LDFLAGS =  -Wall -pedantic -ansi 
+#-fwritable-strings 
 
 test_coord_SOURCES = testCoord.cc 
 test_coord_LDADD = $(top_srcdir)/lib/libMol.la
@@ -11,3 +12,6 @@ test_atom_LDADD = $(top_srcdir)/lib/libMol.la
 
 test_molecule_SOURCES = testMolecule.cc 
 test_molecule_LDADD = $(top_srcdir)/lib/libMol.la
+
+test_system_SOURCES = testSystem.cc 
+test_system_LDADD = $(top_srcdir)/lib/libMol.la
