--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,8 +1,10 @@
 bin_PROGRAMS = pdb2str molsys-create
 
+bin_SCRIPTS= analyze-xyz.py 
+EXTRA_DIST = $(bin_SCRIPTS)
+
 AM_CPPFLAGS= -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/lib/
 AM_LDFLAGS = -pedantic -ansi 
-#-fwritable-strings
 
 pdb2str_SOURCES = pdb2str.cc str.c
 pdb2str_LDADD = $(top_srcdir)/lib/libMol.la
