bdbox-run: -c option: continue stopped calculations.

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.63])
-AC_INIT([bcp-tools], [0.2.7], [s.kondrat@fz-juelich.de])
+AC_INIT([bcp-tools], [0.2.8], [s.kondrat@fz-juelich.de])
 
 AM_INIT_AUTOMAKE()
 AC_CONFIG_MACRO_DIR([m4])
@@ -73,6 +73,18 @@ AC_SUBST(BCPT_XYZ)
 BCPT_XYZ=$(echo ${BINDIR}/analyze-xyz.py)
 AC_SUBST(BCPT_AVERAGE)
 BCPT_AVERAGE=$(echo ${BINDIR}/average-me.py)
+
+AC_SUBST(BDFLEX_RUN)
+BDFLEX_RUN=$(echo ${BINDIR}/bd_flex-run)
+
+# SUBST DONE, INTERRUPT and RUNNING
+AC_SUBST(DONE)
+DONE=.DONE
+AC_SUBST(INTERRUPTED)
+INTERRUPTED=.INTERRUPTED
+AC_SUBST(RUNNING)
+RUNNING=.RUNNING
+
 
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
