--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -227,6 +227,7 @@ BCPT_MAINTAINER = @BCPT_MAINTAINER@
 BCPT_MOLSYS = @BCPT_MOLSYS@
 BCPT_XYZ = @BCPT_XYZ@
 BDBOX = @BDBOX@
+BDFLEX_RUN = @BDFLEX_RUN@
 BINDIR = @BINDIR@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
@@ -241,6 +242,7 @@ CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
+DONE = @DONE@
 DSYMUTIL = @DSYMUTIL@
 DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
@@ -256,6 +258,7 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+INTERRUPTED = @INTERRUPTED@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
@@ -282,6 +285,7 @@ PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
+RUNNING = @RUNNING@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
