--- a/contrib/bd_flex-msub.in
+++ b/contrib/bd_flex-msub.in
@@ -21,6 +21,7 @@
 # 
 #msub="/opt/moab/bin/msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
 #msub="ssh judge /opt/moab/bin/msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
+msub="ssh judge /opt/moab/bin/msub -l nodes=1:ppn=16 -M valiska@gmail.com -m abe -V -S /bin/bash"
 msub="bash"
 
 # my dear self
@@ -42,6 +43,7 @@ function usage()
   echo "  -B BD_FLEX              use BD_FLEX binary."
   echo "  -i FILE                 input parameter file."
   echo "  -c COUNT                continue (count to keep track on reruns)."
+  echo "  -o \"OPTS\"               pass bd_flex options to the runner."
   echo "  -p NUM                  number of processes (for OpenMP)."
   echo "  -M PROC,COL,ROW,BLOCK   number of processes, collons, rows and blocks for MPI."
 
@@ -55,37 +57,35 @@ function usage()
 #
 # Options
 #
-while getopts "d:B:i:p:M:c:v?:" Option
+while getopts "d:B:i:p:M:c:o:v?:" Option
 do
   case $Option in
 
     d  ) directory="$OPTARG"
          cmd="${cmd} -d $OPTARG";;
 
-    B  ) bdflex="$OPTARG"
-         cmd="${cmd} -B $OPTARG";;
+    B  ) cmd="${cmd} -B $OPTARG";;
 
     i  ) input="$OPTARG"
          cmd="${cmd} -i $OPTARG";;
 
-    p  ) nproc="$OPTARG"
-         cmd="${cmd} -p $OPTARG";;
+    p  ) cmd="${cmd} -p $OPTARG";;
 
-    M  ) mpiopt="$OPTARG"
-         cmd="${cmd} -M $OPTARG";;
+    M  ) cmd="${cmd} -M $OPTARG";;
 
     c  ) count="$OPTARG"
          cmd="${cmd} -c $OPTARG";;
 
-    r  ) script="$OPTARG"
-         cmd="${cmd} -k $OPTARG";;
+    o  ) cmd="${cmd} -o \"$OPTARG\"";;
+
+    # FIXME: check if we really need this option
+    r  ) cmd="${cmd} -r $OPTARG";;
 
     :  ) echo "$myname: option -$OPTARG requires an argument." >&2
          exit 1 ;;
 
     v  ) echo "$myname from @PACKAGE@ @VERSION@"
          exit 0;;
-
     
     '?'  |  h) usage ${myname}
 	   exit $OPTERROR;;
